Update Crashpad to 18d70acf81df49cc10b00bcc67c1ec64e16bd9d0

777e36014f76 linux: Add HTTPTransportLibcurl for Linux (but not Android)
6a5695967fda Introduce the crashpad_http_upload tool
8e82f6fde054 mac: Update test and comments with feedback from Apple bug
b5284cdcba93 mac: Add CrashpadClient::GetHandlerMachPort()
a47a512ea60f Use “Bug: crashpad:###” git footer format in change
             descriptions
f59038309651 doc: Document the try server and commit queue
18d70acf81df doc: Link to crashpad_http_upload(1) from the man page
             index

BUG=699607

Review-Url: https://codereview.chromium.org/2754553002
Cr-Commit-Position: refs/heads/master@{#456859}