third_party/crashpad/crashpad/tools/generate_dump.cc
@@ -13,7 +13,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-#include <fcntl.h>
 #include <getopt.h>
 #include <stdio.h>
 #include <stdlib.h>
@@ -49,12 +48,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace crashpad {
 namespace {
 
-struct Options {
-  std::string dump_path;
-  pid_t pid;
-  bool suspend;
-};
-
 void Usage(const base::FilePath& me) {
   fprintf(stderr,
 "Usage: %" PRFilePath " [OPTION]... PID\n"
@@ -86,7 +79,11 @@ int GenerateDumpMain(int argc, char* argv[]) {
     kOptionVersion = -3,
   };
 
-  Options options = {};
+  struct {
+    std::string dump_path;
+    pid_t pid;
+    bool suspend;
+  } options = {};
   options.suspend = true;
 
   const option long_options[] = {
