third_party/crashpad/crashpad/tools/tools.gyp
@@ -50,6 +50,22 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
       ],
     },
     {
+      'target_name': 'crashpad_http_upload',
+      'type': 'executable',
+      'dependencies': [
+        'crashpad_tool_support',
+        '../compat/compat.gyp:crashpad_compat',
+        '../third_party/mini_chromium/mini_chromium.gyp:base',
+        '../util/util.gyp:crashpad_util',
+      ],
+      'include_dirs': [
+        '..',
+      ],
+      'sources': [
+        'crashpad_http_upload.cc',
+      ],
+    },
+    {
       'target_name': 'generate_dump',
       'type': 'executable',
       'dependencies': [
@@ -78,7 +94,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
           },
         }],
       ],
-    }
+    },
   ],
   'conditions': [
     ['OS=="mac"', {
