third_party/crashpad/crashpad/util/util.gyp
@@ -120,6 +120,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
         'net/http_multipart_builder.h',
         'net/http_transport.cc',
         'net/http_transport.h',
+        'net/http_transport_libcurl.cc',
         'net/http_transport_mac.mm',
         'net/http_transport_win.cc',
         'numeric/checked_address_range.cc',
@@ -299,6 +300,17 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
         }, {  # else: OS!="win"
           'sources!': [
             'win/capture_context.asm',
+          ],
+        }],
+        ['OS=="linux"', {
+          'link_settings': {
+            'libraries': [
+              '-lcurl',
+            ],
+          },
+        }, {  # else: OS!="linux"
+          'sources!': [
+            'net/http_transport_libcurl.cc',
           ],
         }],
       ],
